Исправлена сборка EDT 2025 из-за перехода на предустановленную java